[tool.poetry]
name = "pong-ai"
version = "0.0.1"
description = ""
authors = ["Liam Eckert <liameckert17@gmail.com>"]
license = "APACHE 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
pyglet = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
