[tool.poetry]
name = "pong-ai"
version = "0.0.1"
description = ""
authors = ["Liam Eckert <liameckert17@gmail.com>"]
license = "APACHE 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyglet = "^2.0.20"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.18"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
